added responsive text in media queries and fill in readme

--- a/code/index.html
+++ b/code/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Island Life</title>
+  <title>Island News</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@0;1&display=swap" rel="stylesheet">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- dont forget the meta tag for responsiveness -->
 </head>
@@ -23,7 +23,7 @@
       <div></div>
       <div></div>
       <div></div>
-    </div> 
+    </div>
 
     <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
     <h1>Island News</h1>
@@ -32,103 +32,104 @@
       <a href="/About/">About</a>
       <a href="/Home/">Home</a>
       <a href="Contact us/">Contact us</a>
-    </nav> 
+    </nav>
 
   </header>
-  
+
+<!-- The big news content -->
   <div class="big-news">
-    <!-- The big news content -->
     <section class="main-big-news">
       <img src="nice-life2.jpg" alt="cliffs and ocean">
       <article class="article">
         <h2>A beautiful life</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-          Aenean commodo ligula eget dolor. Aenean massa. 
-          Cum sociis natoque penatibus et magnis dis parturient montes, 
-          nascetur ridiculus mus. Donec quam felis, ultricies nec, 
-          pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
-          Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. 
-          In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+          Aenean commodo ligula eget dolor. Aenean massa.
+          Cum sociis natoque penatibus et magnis dis parturient montes,
+          nascetur ridiculus mus. Donec quam felis, ultricies nec,
+          pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+          Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+          In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.
         </p>
       </article>
     </section>
   </div>
 
-<section class="container-small-news">
-  <section class="small-news">
-    <!-- The other news  -->
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="SUP.jpg" alt="SUP on ocean">
-          <h5>New Surf Loge</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
+  <!-- The other news  -->
+  <section class="container-small-news">
+    <section class="small-news">
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="SUP.jpg" alt="SUP on ocean">
+            <h5>New Surf Loge</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
 
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="beach.jpg" alt="house on beach">
-          <h5>Hollies Cove</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="beach.jpg" alt="house on beach">
+            <h5>Hollies Cove</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
 
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="Food.jpg" alt="Food">
-          <h5>Jambos Restaurant</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="Food.jpg" alt="Food">
+            <h5>Jambos Restaurant</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
 
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="yoga.jpg" alt="yoga pose">
-          <h5>Join Island Yoga</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="yoga.jpg" alt="yoga pose">
+            <h5>Join Island Yoga</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
 
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="fish.jpg" alt="clown fish">
-          <h5>New dive sites</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
-    </section>
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="fish.jpg" alt="clown fish">
+            <h5>New dive sites</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
 
-    <section class="news">
-      <div>
-        <a href="a">
-          <img src="waterfall.jpg" alt="jungle waterfall">
-          <h5>Jungle Walk</h5>
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-            Aenean commodo ligula eget dolor. Aenean massa. </p>
-        </a>
-      </div>
+      <section class="news">
+        <div>
+          <a href="a">
+            <img src="waterfall.jpg" alt="jungle waterfall">
+            <h5>Jungle Walk</h5>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+              Aenean commodo ligula eget dolor. Aenean massa. </p>
+          </a>
+        </div>
+      </section>
     </section>
   </section>
-</section>
+
   <footer class="footer">
     <div class="icons">
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-twitter"></a>
+      <a href="#" class="fa fa-instagram"></a>
     </div>
   </footer>
 </body>
