--- a/code/index.html
+++ b/code/index.html
@@ -36,59 +36,51 @@
     <!--*** NEWS TEXT ***-->
     <main>
       <section class="main-news">
-        <h2>Header for the text </h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officiis odit sint sapiente perspiciatis repellendus veniam iste tempore nostrum accusamus nihil provident tempora obcaecati, quasi reprehenderit amet neque recusandae quod! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero quia ut laboriosam illo, earum consectetur excepturi nobis deserunt tenetur quo commodi veritatis totam dignissimos nihil exercitationem! Aut, enim quo. Perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus consequatur ad? Alias ipsam nisi fuga corporis totam, suscipit distinctio nemo, mollitia blanditiis quis optio magni voluptatibus molestiae amet </p>
+        <h2>Only news that brings you joy</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem officiis odit sint   sapiente perspiciatis <b>You</b> repellendus   veniam iste tempore nostrum accusamus <b>create</b>  nihil provident tempora obcaecati, quasi reprehenderit amet neque recusandae   quod! Lorem ipsum, dolor sit amet  consectetur adipisicing elit. <b>your</b> Vero ut laboriosam illo, earumconsectetur excepturi nobis deserunt   tenetur quo    commodi veritatis totam dignissimos nihil exercitationem!  <b>own</b>  Aut, enim quo. Perspiciatis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus consequatur ad? Alias ipsam nisi fuga corporis totam,  <b>Happiness</b>  suscipit distinctio nemo, mollitia blanditiis quis optio magni voluptatibus molestiae amet </p>
       </section>
     </main>
   
     <figure class="figure">
       <div class="image-container">
         <div class="image">
-          <img class="image1" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Just be happy</figcaption>
+          <img class="image1" src="./care.jpg" alt="">
+          <figcaption>Care for others</figcaption>
         </div>
         <div class="image">
-          <img class="image2" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption> happy place</figcaption>
+          <img class="image2" src="./enjoy.jpg" alt="">
+          <figcaption> Don't forget to play</figcaption>
         </div>
         <div class="image">
-          <img class="image3" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Music brings us joy</figcaption>
+          <img class="image3" src="./love.jpg" alt="">
+          <figcaption>Give love</figcaption>
         </div>
         <div class="image">
-          <img class="image4" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Cheer someone up </figcaption>
+          <img class="image4" src="./happy2.jpg" alt="">
+          <figcaption>Be in the moment</figcaption>
         </div>
         <div class="image">
-          <img class="image5" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Don't forget to play</figcaption>
+          <img class="image5" src="./happy3.jpg" alt="">
+          <figcaption>Smile</figcaption>
         </div>
         <div class="image">
-          <img class="image6" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Today just smile</figcaption>
+          <img class="image6" src="./nature.jpg" alt="">
+          <figcaption>Enjoy nature</figcaption>
         </div>
         <div class="image">
-          <img class="image7" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Today just smile</figcaption>
+          <img class="image7" src="./power.jpg" alt="">
+          <figcaption>Empower yourself</figcaption>
         </div>
         <div class="image">
-          <img class="image8" src="http://placekitten.com/200/300
-          " alt="">
-          <figcaption>Today just smile</figcaption>
+          <img class="image8" src="./air.jpg" alt="">
+          <figcaption>Breath</figcaption>
         </div>
       </div>
     </figure>
   
     <!--*** FOOTER ***-->
-    <footer>
-      <p>&copy; Maria Sparre 2021 - Project 2, News site</p>
+    <footer class="footer">
+      <p>&copy; Maria Sparre 2021, Project 2 - News site</p>
     </footer>
   </body>
   
