--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
       <div></div>
       <div></div>
       <div></div>
-      <img src="/5900cead16ae4b3fc58f4836.png" alt="news logo">
+      <img src="https://thumbs.dreamstime.com/t/breaking-news-minimalistic-logo-white-background-entertaining-show-news-vector-illustration-breaking-news-headline-113066889.jpg" alt="news logo">
       <nav>
         <a href="#">Sports</a>
         <a href="#">Politics</a>
