--- a/code/index.html
+++ b/code/index.html
@@ -23,12 +23,14 @@
           <div></div>
           <div></div>
         </div>
+        <div class="logo-group">
         <div class="logo">
           <img src="/assets/logo.png" alt="logo image">
         </div>
         <div class="nameplate">
           <img src="/assets/title.png" alt="website name">
         </div>
+      </div>
       </div>
 
       <div class="middle">
