Ready for upload

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
     </nav>
   </header>
 
-  <section class="big-news">    
+  <section class="big-news container">    
       <div class="big-news-img">
       <img  src="./assets/next-trip-img.png" alt="Picture of a mountain" width="450px">
       <p class="text-on-photo-big">#ALBANIA</p>
@@ -53,7 +53,7 @@
     </div>
   </section>
 
-  <section class="small-news">
+  <section class="small-news container">
     <a href="#">
       <img src="./assets/Norge.jpg" alt="Photo from Norway">
       <p>Troll´s tongue Norway</p>
