--- a/code/index.html
+++ b/code/index.html
@@ -220,6 +220,8 @@
 
     <!-- END OF MAIN PART OF PAGE -->
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      COPYRIGHT WITNESSES OF DEVNEWS ALL RIGHTS RESERVED
+    </footer>
   </body>
 </html>
