Finished styling in greenish and hovers

--- a/code/index.html
+++ b/code/index.html
@@ -9,12 +9,12 @@
   </head>
   <body>
     <header class="header container">
-      <div class="hamburger">
+      <a href="#"><div class="hamburger">
         <div></div>
         <div></div>
         <div></div>
-      </div>
-      <h1 class="top-heading">Daily Hacker</h1>
+      </div></a>
+      <a href="#"><h1 class="top-heading">Daily TechNews</h1></a>
       <img class="logo" src="./logo.svg" alt="Technigo logo">
       <nav class="navigation-container">
         <a class="navigation-item" href="#">Top News</a>
@@ -26,53 +26,114 @@
 
     <section class="big-news container">
       <div class="news-card">
-        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1524289286702-f07229da36f5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
-          <div class="big-news-text">
-            <p class="title">Lorem Ipsum</p>
-            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1524289286702-f07229da36f5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
+            <div class="big-news-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+            </div>
           </div>
-        </div>
+        </a>
       </div>
+    </section>
+
+    <a href="#"><section class="news-type container">
+      <a href="#"><p class="type">Top News</p></a>
+    </section></a>
+
+    <section class="other-news container">
+      <div class="news-card">
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1523503211343-9bb90cc3cb56?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="news-card">
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+          <div class="news-card-text">
+            <p class="title">Lorem Ipsum</p>
+            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          </div>
+        </a>
+      </div>
+      <div class="news-card">
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1511680059018-e7cc6c0f22c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="news-card">
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1504237111663-37d6094bec09?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div> 
+          </div>
+        </a>
+      </div>      
+    </section>
+
+    <section class="news-type container">
+      <a href="#"><p class="type">Latest News</p></a>
     </section>
 
     <section class="other-news container">
       <div class="news-card">
-        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1523503211343-9bb90cc3cb56?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
-          <div class="news-card-text">
-            <p class="title">Lorem Ipsum</p>
-            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1523503211343-9bb90cc3cb56?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="news-card">
-        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-        <div class="news-card-text">
-          <p class="title">Lorem Ipsum</p>
-          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        </div>
-      </div>
-      <div class="news-card">
-        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1511680059018-e7cc6c0f22c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
-          <div class="news-card-text">
-            <p class="title">Lorem Ipsum</p>
-            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="news-card">
-        <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1504985954001-5737b2af529e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=779&q=80">
-          <div class="news-card-text">
-            <p class="title">Lorem Ipsum</p>
-            <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div> 
-        </div>
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1511680059018-e7cc6c0f22c8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="news-card">
+        <a class="news-link" href="#">
+          <div class="polaroid"><img class="news-card-pic" src="https://images.unsplash.com/photo-1504237111663-37d6094bec09?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
+            <div class="news-card-text">
+              <p class="title">Lorem Ipsum</p>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div> 
+          </div>
+        </a>
       </div>      
     </section>
     <footer class="footer container">
-      <div>About us</div>
-      <div>Career</div>
-      <div>Contact</div>
+      <a class="footer-link" href="#">About us</a>
+      <a class="footer-link" href="#">Career</a>
+      <a class="footer-link" href="#">Contact</a>
     </footer>
   </body>
 </html>
