add a tag to news titles

--- a/code/index.html
+++ b/code/index.html
@@ -101,7 +101,9 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3>
+                  <a href="./pages/news.html">What is Lorem Ipsum?</a>
+                </h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -116,7 +118,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -131,7 +133,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -146,7 +148,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -161,7 +163,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -176,7 +178,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -191,7 +193,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
@@ -206,7 +208,7 @@
                   class="res-img"
               /></a>
               <div>
-                <h3>What is Lorem Ipsum?</h3>
+                <h3><a href="./pages/news.html">What is Lorem Ipsum?</a></h3>
                 <p>
                   It is a long established fact that a reader will be distracted
                   by the readable content of a page when looking at its layout.
