--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <script src="https://use.fontawesome.com/bb61c0507d.js"></script>
     <meta charset="utf-8" />
