adding big news section to html

--- a/code/index.html
+++ b/code/index.html
@@ -58,7 +58,16 @@
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="news-card">
+        <article class="big-article">
+          <h2 class="news-title">This is Big News!</h2>
+          <p class="news-text">Wheeeeek! Wheek squeak wheek wheek! Squeak squeak wheek
+           whek wheeeeeek! wheeek wheek Wheeek!</p>
+        </article>
+    </div>
+      <figure class="big-image">
+        <img src="/assets/Spiderpig.jpg" alt="Giant spider and Guinea pig">
+      </figure>
     </section>
 
     <section class="">
