Cleaned and finalized the code

--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,8 @@
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -14,7 +16,7 @@
         <div></div>
         <div></div>
       </div></a>
-      <a href="#"><h1 class="top-heading">Daily TechNews</h1></a>
+      <a href="#"><h1 class="top-heading">Fizzy TechNews</h1></a>
       <img class="logo" src="./logo.svg" alt="Technigo logo">
       <nav class="navigation-container">
         <a class="navigation-item" href="#">Top News</a>
@@ -130,6 +132,7 @@
         </a>
       </div>      
     </section>
+    
     <footer class="footer container">
       <a class="footer-link" href="#">About us</a>
       <a class="footer-link" href="#">Career</a>
