--- a/code/index.html
+++ b/code/index.html
@@ -54,7 +54,7 @@
           <a href=""><img src="\assets\Nike_Sportswear_FA20_Air_Force_1_Flyleather_QS_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
         <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas.</p>
       </div>
 
       <div class="sn-card">
@@ -62,7 +62,7 @@
           <a href=""><img src="\assets\Nike_Sportswear_SU20_W_Air_Force_1_LX_10_native_1600.jpg" alt="IMAGE"></a>
         </div>
         <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas.</p>
       </div>
 
       <div class="sn-card">
@@ -70,10 +70,8 @@
           <a href=""><img src="\assets\Nike_Chinese_NY.jpg" alt="IMAGE"></a>
         </div>
         <h3>Rip & Tear</h3>
-        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. Venison burgdoggen fatback flank beef cupim corned beef tri-tip turkey bacon strip steak. Ground round kevin turducken jerky landjaeger ham. Leberkas pork loin short loin biltong venison fatback.</p>
-      </div>
-
-      
+        <p>Bacon ipsum dolor amet brisket picanha ribeye andouille porchetta shank corned beef ground round chislic pork belly sausage burgdoggen leberkas. </p>
+      </div>    
 
     </section>
 
